# effective-modern-cpp

./: .editorconfig  CMakeLists.txt  README.md
code/: CMakeLists.txt
code/1-template_deducing_type/: CMakeLists.txt  template.cpp  template.hpp
code/15-constexpr/: constexpr.cpp
code/16-const_thread_safe/: thread_safe.cpp
code/18-unique_ptr/: unique_ptr.cpp
code/19-shared_ptr/: shared_ptr.cpp
code/2-auto_deducing_type/: CMakeLists.txt  auto.cpp
code/21-make_shared/: make_shared.cpp
code/22-std_move_forward/: std_move_forward.cpp
code/23-std_move_forward/: CMakeLists.txt  std_move_forward.cpp
code/24-universal_rvalue_ref/: universal_rvalue_ref.cpp
code/25-use_universal_rvalue_ref/: use_universal_rvalue_ref.cpp
code/26-avoid_overload_universal_ref/: avoid_overload_universal_ref.cpp
code/27-alternative_overload_universal_ref/: alternative_overload_universal.cpp
code/30-perfect_forwarding_failure_cases/: perfect_forwarding_failure_cases.cpp
code/31-avoid_default_capture_modes/: avoid_default_capture_modes.cpp
code/32-use_init_capture/: use_init_capture.cpp
code/35-task_based_programming/: task_based_programming.cpp
code/36-specify_launch_async/: specify_launch_async.cpp
code/37-thread_joinable_all_paths/: thread_joinable_all_paths.cpp
code/40-atomic_and_volatile/: atomic_and_volatile.cpp
code/test_thread_local/: test_thread_local.cpp
